@@ -1,12 +1,14 @@
 package com.switchfully.themoviewasbetter.service;
 
+import com.switchfully.themoviewasbetter.domain.Book;
 import com.switchfully.themoviewasbetter.dto.BookDTO;
+import com.switchfully.themoviewasbetter.exceptions.BookNotFoundException;
 import com.switchfully.themoviewasbetter.mapper.BookMapper;
 import com.switchfully.themoviewasbetter.repository.BookRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookService {
@@ -19,10 +21,11 @@ public class BookService {
     }
 
     public List<BookDTO> getAllBooks() {
-        return bookRepository.getAllBooks().stream().map(mapper::toDto).collect(Collectors.toList());
+        return bookRepository.getAllBooks(new HashMap<>()).stream().map(mapper::toDto).toList();
     }
 
-    public BookDTO findByIsbn(String isbn){
-        return mapper.toDto(bookRepository.findByIsbn(isbn));
+    public BookDTO findByIsbn(String isbn) {
+        Book book = bookRepository.findByIsbn(isbn).orElseThrow(BookNotFoundException::new);
+        return mapper.toDto(book);
     }
 }
